
@startuml
' Title
title ERD - ProMeet Database

skinparam roundcorner 20
skinparam linetype ortho
skinparam HorizontalAlignment Left

entity users {
  * id : CHAR(36)
  --
  email : VARCHAR(191)
  password_hash : VARCHAR(255)
  name : VARCHAR(100)
  phone : VARCHAR(20)
  birth_date : DATE
  sex : BOOLEAN
  address : VARCHAR(255)
  avatar_url : VARCHAR(255)
  role : TINYINT
  is_ban : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity rooms {
  * id : CHAR(36)
  --
  name : VARCHAR(255)
  html_description : TEXT
  price : FLOAT
  capacity : INT
  location_name : VARCHAR(255)
  latitude : DOUBLE
  longitude : DOUBLE
  category : TINYINT
  average_rating : FLOAT
  review_count : INT
  is_active : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity bookings {
  * id : CHAR(36)
  --
  room_id : CHAR(36)
  user_id : CHAR(36)
  booking_code : CHAR(14)
  total_price : INT
  contact_email : VARCHAR(191)
  contact_name : VARCHAR(100)
  contact_phone : VARCHAR(20)
  payment_method : TINYINT
  status : TINYINT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity booking_slots {
  * id : CHAR(36)
  --
  booking_id : CHAR(36)
  booking_date : DATE
  time_slot : TIME
}

entity booking_status_history {
  * id : CHAR(36)
  --
  booking_id : CHAR(36)
  status : TINYINT
  changed_at : TIMESTAMP
  note : TEXT
  label : VARCHAR(255)
}

entity reviews {
  * id : CHAR(36)
  --
  room_id : CHAR(36)
  user_id : CHAR(36)
  booking_id : CHAR(36)
  rating : TINYINT
  comment : TEXT
  created_at : TIMESTAMP
}

entity images {
  * id : CHAR(36)
  --
  room_id : CHAR(36)
  image_url : VARCHAR(255)
  is_primary : BOOLEAN
  created_at : TIMESTAMP
}

entity remember_tokens {
  * id : CHAR(36)
  --
  user_id : CHAR(36)
  remember_token : CHAR(64)
  expiry_time : INT
  created_at : TIMESTAMP
}

entity room_stats {
  * room_id : CHAR(36)
  --
  view_count : INT
  favorite_count : INT
  booking_count : INT
  total_hours : INT
  updated_at : TIMESTAMP
}

' Relationships
users ||--o{ bookings : has
users ||--o{ reviews : writes
users ||--o{ remember_tokens : has

rooms ||--o{ bookings : has
rooms ||--o{ reviews : receives
rooms ||--o{ images : has
rooms ||--o{ room_stats : has

bookings ||--o{ booking_slots : has
bookings ||--o{ booking_status_history : logs
bookings ||--o{ reviews : gets

@enduml
